# Passthrough

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  decisions.md  flow.md  slices.md  structure.md
docs/adapters/: cloudflare.md
passthrough/: api.py  errors.py  main.py  pipeline.py
passthrough/adapters/: base.py  cloudflare.py
passthrough/drivers/: base.py  camoufox.py
passthrough/extractors/: base.py  facebook.py
scripts/: patch_playwright_pageerror.py
